k8s/memos/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/component: web
    spec:
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
      containers:
        - name: memos
          image: ghcr.io/usememos/memos:0.22.5@sha256:83e3a5bd72c1b9c35213f83bffaf1df7b959cf0b04ebc40e7c82582e2cd00514
          resources:
            requests:
              memory: 50M
            limits:
              memory: 100M
          volumeMounts:
            - name: volume
              mountPath: /var/opt/memos
          ports:
            - name: web
              containerPort: 5230
