k8s/memos/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://memos.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: memos
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: memos
    gethomepage.dev/name: Memos
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: &host memos.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
